objects/wkdw__ArticleToFlowLink__c.object
<CustomObject>
    <description>Establishes the linkage between a knowledge article and any existing flows, which get displayed at the bottom of the knowledge article.</description>
    <fields>
        <fullName>wkdw__ArticleNumber__c</fullName>
        <description>The article number from which the associated flows are launched.</description>
        <label>Article Number</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__FlowAPIName__c</fullName>
        <description>API Name of a flow to launch from the knowledge article.</description>
        <label>Flow API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox indicating whether the button for the configured flow should be visible on the article page.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkdw__Label__c</fullName>
        <description>The employee-facing label for the button that launches the flow from the knowledge article.</description>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Article To Flow Link</label>
    <listViews>
        <fullName>All_article_flow_links</fullName>
        <columns>NAME</columns>
        <columns>wkdw__FlowAPIName__c</columns>
        <columns>wkdw__IsActive__c</columns>
        <columns>wkdw__ArticleNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AFL-{00000}</displayFormat>
        <label>Article To Flow Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article To Flow Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>